boulder/boulder/tests/compile_fail/type/struct_name.bo
# multiple types
# `A`
# (6:
# (8:

struct A;

struct A {
    a: u32
}